fixed code contrib process on mobile. minor content changes and bugs

--- a/source/assets/stylesheets/_cla.css.scss
+++ b/source/assets/stylesheets/_cla.css.scss
@@ -46,12 +46,12 @@
 	}
 	.agreement{
 	  font-family: monospace, serif;
-	  font-size: 1em;
+	  font-size: 14px;
 	}
   }
 
   .cla-form{
-	width: 85%;
+	width: 65%;
 	height: 1270px;
 	@include media($tablet) {
 	  width: 100%;
